@@ -260,6 +260,7 @@
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
+	      <signal name="clicked" handler="pl2_delete_selected_songs" last_modification_time="Sun, 27 Jun 2004 13:38:43 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
